fix button and add sounds

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <script src="dist/pixi.min.js"></script>
+    <script src="dist/howler.min.js"></script>
     <script src="dist/script.js"></script>
 </body>
 </html>
